# impulse

./: .cargo-config.toml.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE  NIX_USAGE.md  README.md  config.toml.example  flake.nix  impulse.conf.example
.github/workflows/: ci.yml
screenshots/: README.md
src/: browser.rs  config.rs  lastfm.rs  lastfm_auth.rs  logger.rs  main.rs  metadata.rs  player.rs  playlist.rs  queue.rs  stderr_suppress.rs  ui.rs
