[package]
name = "impulse"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
authors = ["dbeley"]
description = "Minimalist music player with minimal dependencies, focusing on speed and a keyboard-centric TUI"
license = "MIT"

[dependencies]
# TUI framework
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm = "0.28"
ratatui-image = { version = "1.0", default-features = false }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# Audio playback
rodio = { version = "0.17", default-features = false, features = ["symphonia-all"] }
symphonia = { version = "0.5", default-features = false, features = ["opt-simd"] }
symphonia-adapter-libopus = "0.2"

# Configuration
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"

# File system
walkdir = "2.4"

# Fuzzy search
fuzzy-matcher = "0.3"

# Error handling
anyhow = "1.0"

# HTTP for Last.fm auth flow
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde_json = "1.0"
md5 = "0.7"
webbrowser = "0.8"

# Last.fm scrobbling
rustfm-scrobble = "1.1"

[profile.dev]
# Optimize dependencies but not our code for fast iteration
opt-level = 0
split-debuginfo = "unpacked"  # Faster linking
debug = 1  # Line tables only
incremental = true

[profile.dev.package."*"]
# Optimize dependencies even in dev builds for better runtime
opt-level = 3
debug = false

[profile.release]
opt-level = 3
lto = "thin"  # Thin LTO is faster than full LTO with similar results
codegen-units = 1
strip = true

[profile.release-fast]
# Fast release builds for testing (less optimization, faster compile)
inherits = "release"
opt-level = 2
lto = false
codegen-units = 16
