[package]
name = "impulse"
version = "0.1.2"
edition = "2024"
rust-version = "1.85"
authors = ["dbeley"]
description = "Minimalist music player with minimal dependencies, focusing on speed and a keyboard-centric TUI"
license = "MIT"

[lints.rust]
# Rust 2024 edition lints
unsafe_op_in_unsafe_fn = "warn"

[lints.clippy]
# Recommended clippy lints for Rust 2024
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow some pedantic lints that are too strict or require significant refactoring
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"              # Function length limits are arbitrary
cast_precision_loss = "allow"         # f64 precision is acceptable for UI
cast_possible_truncation = "allow"    # Checked conversions add complexity
cast_possible_wrap = "allow"          # Score calculations are fine as-is
cast_sign_loss = "allow"              # Progress bars don't need sign
float_cmp = "allow"                   # Test assertions are fine
unnecessary_wraps = "allow"           # Consistent API is more important
if_not_else = "allow"                 # Positive conditions sometimes clearer
items_after_statements = "allow"      # Constants close to usage are readable
trivially_copy_pass_by_ref = "allow"  # Consistency with trait methods
map_unwrap_or = "allow"               # map_or/is_some_and not always clearer
redundant_closure_for_method_calls = "allow"  # Sometimes explicit is clearer
uninlined_format_args = "allow"       # Old style is still valid
unnecessary_debug_formatting = "allow" # Debug formatting is explicit
case_sensitive_file_extension_comparisons = "allow"  # Extensions are case-sensitive on Unix
unused_self = "allow"                 # Trait implementations may need &self
format_push_string = "allow"          # write! macro adds complexity
assigning_clones = "allow"            # clone_from not always better
cast_lossless = "allow"               # Explicit casts are clearer
manual_let_else = "allow"             # match can be clearer
needless_continue = "allow"           # Explicit continue shows intent
unnecessary_map_or = "allow"          # map_or is clear and established

[dependencies]
# TUI framework
ratatui = { version = "0.28", default-features = false, features = ["crossterm"] }
crossterm = "0.28"
ratatui-image = { version = "2.0", default-features = false }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# Audio playback
rodio = { version = "0.19", default-features = false, features = ["symphonia-all"] }
symphonia = "0.5"
symphonia-adapter-libopus = "0.2"

# Configuration
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"

# File system
walkdir = "2.4"

# Fuzzy search
fuzzy-matcher = "0.3"

# Random number generation
rand = "0.8"

# Error handling
anyhow = "1.0"

# Command line argument parsing
clap = { version = "4.5", features = ["derive"] }

# HTTP for Last.fm auth flow
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde_json = "1.0"
md5 = "0.7"
webbrowser = "1.0"

# Last.fm scrobbling
rustfm-scrobble = "1.1"

[dev-dependencies]
tempfile = "3.8"

[profile.dev]
# Optimize dependencies but not our code for fast iteration
opt-level = 0
split-debuginfo = "unpacked"  # Faster linking
debug = 1  # Line tables only
incremental = true

[profile.dev.package."*"]
# Optimize dependencies even in dev builds for better runtime
opt-level = 3
debug = false

[profile.release]
opt-level = 3
lto = "thin"  # Thin LTO is faster than full LTO with similar results
codegen-units = 1
strip = true

[profile.release-fast]
# Fast release builds for testing (less optimization, faster compile)
inherits = "release"
opt-level = 2
lto = false
codegen-units = 16
